<resources>
    <string name="app_name">Scanner SAE302</string>

    <string name="title_login">CONNEXION</string>
    <string name="hint_user">Utilisateur</string>
    <string name="hint_pass">Mot de passe</string>
    <string name="btn_login">Se connecter</string>

    <string name="title_main">Scanner Réseau</string>
    <string name="btn_refresh">Rafraîchir</string>

    <string name="title_detail">Détail de la menace</string>
    <string name="label_titre">TITRE</string>
    <string name="label_desc">DESCRIPTION TECHNIQUE</string>
    <string name="btn_back">Retour à la liste</string>
    <string name="d_tail_de_la_menace" />
    <string name="titre">Titre</string>
    <string name="titre_de_la_faille">Titre de la faille</string>
    <string name="description_technique">Description technique</string>
    <string name="description_d_taill_e">Description détaillée</string>
    <string name="retour_la_liste">Retour à la liste</string>
    <string name="détail_de_la_menace">Détail de la menace</string>
    <string name="_192_168_1_1">192.168.1.1</string>
    <string name="high">high</string>
    <string name="_2024_05_20">2024-05-20</string>
    <string name="scanner_r_seau">Scanner réseau</string>
    <string name="refresh">refresh</string>
</resources>