<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:gravity="center"
    android:background="@color/cyber_dark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#FFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"/>

    <EditText
        android:id="@+id/editUser"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints=""
        android:hint="@string/hint_user"
        android:textColorHint="@color/text_grey"
        android:textColor="#FFFF"
        android:backgroundTint="@color/cyber_blue"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/editPass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints=""
        android:hint="@string/hint_pass"
        android:inputType="textPassword"
        android:textColorHint="@color/text_grey"
        android:textColor="#FFFF"
        android:backgroundTint="@color/cyber_blue"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btn_login"

        android:backgroundTint="@color/cyber_blue"
        android:textColor="#FFFF" />

</LinearLayout>