<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cyber_dark"
    android:padding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/cyber_blue"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@android:drawable/ic_lock_idle_lock"
            app:tint="@color/white"
            xmlns:app="http://schemas.android.com/apk/res-auto"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/détail_de_la_menace"
            android:textColor="#FFFF"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="8dp"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titre"
                android:textColor="#FFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewTitre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titre_de_la_faille"
                android:textColor="#FFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cyber_blue"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_technique"
                android:textColor="#FFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_d_taill_e"
                android:textColor="#FFFF"
                android:textSize="16sp"
                android:lineSpacingMultiplier="1.2"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnRetour"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/retour_la_liste"
        android:backgroundTint="@color/alert_red"
        android:textColor="#FFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="16dp"/>

</LinearLayout>